# ev_sdk_demo3.0_vehicle_plate_detection

./: .gitignore  CMakeLists.txt  README.md
3rd/license/lib/: license_lib.sig
3rd/license/lib/pkgconfig/: ji_license.pc
doc/: EV_SDK配置协议说明.md
include/: ji_utils.h
src/: Configuration.hpp  SampleAlgorithm.cpp  SampleAlgorithm.hpp  SampleDetector.h  ji.cpp
test/: test.cpp
